feat: Implementierung eines Profitrechners für Handelsanalysen

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -229,6 +229,28 @@
             </div>
         </div>
 
+        <!-- Nach der Shopping Liste, vor den Ergebnissen -->
+        <div class="total-profits-section mb-4">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="mb-0">Profit Übersicht</h3>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <ul class="list-unstyled" id="profitsList">
+                                <!-- Wird dynamisch gefüllt -->
+                            </ul>
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Gesamtgewinn</h5>
+                            <div id="totalProfit" class="h4">0g 0s 0c</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Results Section -->
         <div id="resultsList"></div>
     </div>
